fix(OptimizeReport): do not overflow reports on dashboard view
related to OPT-4244

--- a/client/src/components/Dashboards/DashboardEdit.scss
+++ b/client/src/components/Dashboards/DashboardEdit.scss
@@ -15,5 +15,6 @@
   .OptimizeReport .visualization,
   .ExternalReport iframe {
     opacity: 0.5;
+    overflow: auto;
   }
 }
