--- a/client/src/modules/components/DefinitionSelection/DefinitionSelection.scss
+++ b/client/src/modules/components/DefinitionSelection/DefinitionSelection.scss
@@ -1,7 +1,7 @@
 .DefinitionSelection {
   width: 100%;
 
-  > div > .Popover__dialog {
+  > div > .dialogContainer > .Popover__dialog {
     padding: 20px 40px;
   }
 
